<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/nombre"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/region"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/comuna"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/age"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/tipo" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/estado" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/genero" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="italic"
            android:text="@string/descripcion" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>